tests/baselines/reference/customMetadataDecorator.importedNamespace.8.errors.txt
tests/cases/conformance/decorators/decoratorMetadata/main.ts(1,1): error TS1435: Unable to import implicit decorator 'Reflect.metadata' from module 'foo' as this file is not a module.
tests/cases/conformance/decorators/decoratorMetadata/main.ts(3,5): error TS1435: Unable to import implicit decorator 'Reflect.metadata' from module 'foo' as this file is not a module.
tests/cases/conformance/decorators/decoratorMetadata/main.ts(7,5): error TS1435: Unable to import implicit decorator 'Reflect.metadata' from module 'foo' as this file is not a module.
tests/cases/conformance/decorators/decoratorMetadata/main.ts(8,12): error TS1435: Unable to import implicit decorator 'Reflect.metadata' from module 'foo' as this file is not a module.
tests/cases/conformance/decorators/decoratorMetadata/main.ts(10,5): error TS1435: Unable to import implicit decorator 'Reflect.metadata' from module 'foo' as this file is not a module.


==== tests/cases/conformance/decorators/decoratorMetadata/global.d.ts (0 errors) ====
    declare module "foo" {
        namespace Reflect {
            const metadata: any;
        }
    }
    declare const dec: any;
==== tests/cases/conformance/decorators/decoratorMetadata/main.ts (5 errors) ====
    @dec
    ~~~~
!!! error TS1435: Unable to import implicit decorator 'Reflect.metadata' from module 'foo' as this file is not a module.
    class C {
        @dec x!: number;
        ~~~~
!!! error TS1435: Unable to import implicit decorator 'Reflect.metadata' from module 'foo' as this file is not a module.
    
        constructor(x: number) {}
    
        @dec
        ~~~~
!!! error TS1435: Unable to import implicit decorator 'Reflect.metadata' from module 'foo' as this file is not a module.
        method(@dec x: number): string { return ""; }
               ~~~~
!!! error TS1435: Unable to import implicit decorator 'Reflect.metadata' from module 'foo' as this file is not a module.
    
        @dec
        ~~~~
!!! error TS1435: Unable to import implicit decorator 'Reflect.metadata' from module 'foo' as this file is not a module.
        get accessor(): string { return ""; }
    }
    